# Classistant

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  docker-init.sql  init.sql
classistant-server/: Cargo.toml
classistant-server/src/: app_api.rs  auth.rs  auth_hash.rs  command_line.pest  data_user.rs  db.rs  group.rs  http_api.rs  identity.rs  macros.rs  main.rs  perm.rs  result.rs  site_config.rs  user_data.rs
classistant-server/src/app_api/: api_191017.rs  api_191103.rs
classistant-server/src/db/: impl_mysql.rs
classistant-server/src/http_api/: auth.rs  data.rs  forms.rs  groups.rs  sessions.rs  users.rs
classistant-server/src/http_api/groups/: members.rs  owner.rs
classistant-web/: README.md  package 2.json  package.json  tsconfig.json
classistant-web/public/: index.html
classistant-web/src/: App.tsx  AppBar.tsx  LoginBox.tsx  main.tsx  routes.tsx
classistant-web/src/component/: AddGroup.tsx  Chart.tsx  GroupInfo.tsx  GroupPage.tsx  Information.tsx  ListIterm.tsx  Title.tsx
classistant-web/src/components/layout/: Header.tsx
classistant-web/src/containers/: MyThemeProvider.tsx
classistant-web/src/pages/: DashBoard.tsx  Signin.tsx  Signup.tsx  login.tsx  users.tsx
classistant-web/src/pages/heroes/: index.tsx
classistant-web/src/pages/login/: index.tsx
classistant-web/src/styles/layouts/Minimal/: Minimal.tsx
classistant-web/src/styles/layouts/Minimal/components/Topbar/: Topbar.tsx
classistant-web/src/styles/theme/: index.ts  palette.ts  typography.ts
web/: package.json
web/src/: App.tsx  loginBox.tsx
