[package]
name = "classistant-server"
version = "0.1.0"
description = "API server software for Classistant"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-rt = "*"
actix-session = "0.2"
actix-identity = "0.1"
rsa = "0.1"
rand = "0.6"
lazy_static = "*"
base64 = "*"
serde = "*"
serde_json = "*"
mysql = "*"
clap = "*"
md5 = "*"
blake2 = "0.8"
